# NNE

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO-TASKS  configure.ac
cmake/Modules/: Findnn.cmake  Findnn.common.cmake  Findnn.lib.cmake  Findnn.sdk.cmake  Findnn.sdk.common.cmake
nn/: CMakeLists.txt
nn.common/: CMakeLists.txt
nn.common/include/: nn_defs.h  nn_error.h
nn.common/src/: null.c
nn.designer/: CMakeLists.txt  nne.pro
nn.designer/src/: NeuralNetwork.cpp  NeuralNetwork.h  Project.cpp  Project.h  Workspace.h  history.h  ostream.h  project.h
nn.designer/src/gui/: mainwindow.cpp  mainwindow.h
nn.designer/ui/: mainwindow.ui
nn.lib/: CMakeLists.txt
nn.lib/include/: nn_context.h  nn_defs.h  nn_matrix.h  nn_platform.h  nn_types.h
nn.lib/src/: nn_alloc.c  nn_alloc.h  nn_constants.h  nn_context.c  nn_list.c  nn_matrix.c  nn_platform.c  nn_runtime.c  nn_runtime.h  nn_types_internal.h
nn.sdk/: CMakeLists.txt
nn.sdk.common/: CMakeLists.txt
nn.sdk.common/include/: nn_defs.h  nn_error.h  nn_types.h  nn_util.h
nn.sdk/include/: nn_context.h  nn_defs.h  nn_matrix.h  nn_network.h  nn_platform.h  nn_types.h
nn.sdk/src/: nn_cl_include.h  nn_constants.h  nn_context.c  nn_error_mapper.c  nn_error_mapper.h  nn_internal_limits.h  nn_kernels.c  nn_kernels.h  nn_matrix.c  nn_memory.c  nn_memory.h  nn_network.c  nn_platform.c  nn_runtime.c  nn_runtime.h  nn_types_internal.h  nn_util.h  state_plan.txt
nn/include/: nn_allocation.h  nn_context.h  nn_defs.h  nn_error.h  nn_list.h  nn_matrix.h  nn_platform.h  nn_types.h
nn/src/: nn_context.c  nn_error.c  nn_list.c  nn_matrix.c  nn_platform.c  nn_runtime.c  nn_types_internal.h
nne/: CMakeLists.txt  qml.qrc
nne/screen/: main.qml  splash.qml
nne/screen/component/: Activity.qml  Device.qml  NneMenu.qml  Work.qml
nne/screen/window/: Compositor.qml  Main.qml  Splash.qml
nne/script/: screen.js
nne/src/: history.cpp  history.h  main.cpp  main1.c  ostream.h  project.cpp  project.h
nne/src/gui/: mainwindow.cpp  mainwindow.h
nne/ui/: mainwindow.ui
test.nn/: CMakeLists.txt
test.nn.sdk/: CMakeLists.txt
test.nn.sdk/include/: test_nn_callback.h  test_nn_context.h  test_nn_include.h  test_nn_kernel_execution.h  test_state.h
test.nn.sdk/src/: main.c  test_nn_callback.c  test_nn_context.c  test_nn_kernel_execution.c  test_nn_platform.c
test.nn/include/: test_nn_callback.h  test_nn_context.h  test_nn_include.h  test_nn_platform.h  test_state.h
test.nn/src/: main.c  test_nn_callback.c  test_nn_context.c  test_nn_platform.c
test_nn/: CMakeLists.txt
test_nn/include/: test_nn_context.h  test_nn_include.h  test_nn_list.h  test_nn_platform.h
test_nn/src/: main.c  test_nn_context.c  test_nn_list.c
