# ------------------------------------------------------------------------------
# Top Level cmake file.
# ------------------------------------------------------------------------------

# ------------------------------------------------------------------------------
# Common constants.
# ------------------------------------------------------------------------------
set(MIN_CMAKE_VERSION 3.10)

# ------------------------------------------------------------------------------
# Setup.
# ------------------------------------------------------------------------------
cmake_minimum_required(VERSION ${MIN_CMAKE_VERSION})
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

# ------------------------------------------------------------------------------
# Set flags, compiler options.
# ------------------------------------------------------------------------------
include(ClangFormat)

# ------------------------------------------------------------------------------
# Add subprojects.
# ------------------------------------------------------------------------------
add_subdirectory(nn)
add_subdirectory(nne)

add_subdirectory(test_nn)

