# ------------------------------------------------------------------------------
# Top Level cmake file.
# ------------------------------------------------------------------------------
set(TARGET nn)

# ------------------------------------------------------------------------------
# Common constants.
# ------------------------------------------------------------------------------
set(MIN_CMAKE_VERSION 3.10)
project(${TARGET})

# ------------------------------------------------------------------------------
# Setup.
# ------------------------------------------------------------------------------
cmake_minimum_required(VERSION ${MIN_CMAKE_VERSION})
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

# ------------------------------------------------------------------------------
# Set flags, compiler options.
# ------------------------------------------------------------------------------
include(ClangFormat)

# ------------------------------------------------------------------------------
# Add subprojects.
# ------------------------------------------------------------------------------
add_subdirectory(nn.common)
add_subdirectory(nn.lib)
#add_subdirectory(nn.designer)

add_subdirectory(test.nn)

