AC_INIT([nn], [0.0.1], [msforenter090@gmail.com], [nn])

AC_PREREQ([2.69])
AC_CONFIG_AUX_DIR(bin-aux)

# -----------------------------------------------------------------------------
# Sub projects.
# -----------------------------------------------------------------------------
AC_CONFIG_SUBDIRS(nn, nne)

AC_OUTPUT

